--- a/index.html
+++ b/index.html
@@ -123,50 +123,70 @@
     </div>
   </section>
 
-  <!-- Comparisons -->
-  <section id="comparisons" class="section">
-    <h2>Comparisons</h2>
+ <section id="comparisons" class="section">
+  <h2>Comparisons</h2>
 
-    <!-- 1) Swordswoman -->
-    <article class="pair">
-      <h3>Apprentice Swordswoman</h3>
-      <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
-        <!-- 左：Midjourney -->
-        <img class="img img-left"  src="assets/mj_swordswoman.jpeg?v=20"  alt="Midjourney · apprentice swordswoman">
-        <!-- 右：Wenxin Yige -->
-        <img class="img img-right" src="assets/wx_swordswoman.png?v=20"   alt="Wenxin Yige · apprentice swordswoman">
-        <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
-        <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
-      </div>
-    </article>
-
-    <!-- 2) Archer -->
-    <article class="pair">
-      <h3>Apprentice Archer</h3>
-      <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
-        <img class="img img-left"
-             src="assets/mj_archer.jpeg?v=20"
-             alt="Midjourney · apprentice archer"
-             onerror="this.onerror=null;this.src='assets/mj-archer.jpeg?v=20';">
+  <!-- 1) Swordswoman -->
+  <article class="pair">
+    <h3>Apprentice Swordswoman</h3>
+    <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
+      <!-- 左：MJ -->
+      <img class="img img-left"
+           src="assets/mj_swordswoman.jpeg?v=9"
+           alt="Midjourney · apprentice swordswoman">
+      <!-- 右：Wenxin（放在可变宽度遮罩里） -->
+      <div class="reveal">
         <img class="img img-right"
-             src="assets/wx_archer.png?v=20"
-             alt="Wenxin Yige · apprentice archer">
-        <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
-        <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
+             src="assets/wx_swordswoman.png?v=9"
+             alt="Wenxin Yige · apprentice swordswoman">
       </div>
-    </article>
 
-    <!-- 3) Forest guardian -->
-    <article class="pair">
-      <h3>Young Forest Guardian</h3>
-      <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
-        <img class="img img-left"  src="assets/mj_forest_guardian.jpeg?v=20" alt="Midjourney · young forest guardian">
-        <img class="img img-right" src="assets/wx_forest_guardian.png?v=20"  alt="Wenxin Yige · young forest guardian">
-        <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
-        <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
+      <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
+      <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
+    </div>
+  </article>
+
+  <!-- 2) Archer -->
+  <article class="pair">
+    <h3>Apprentice Archer</h3>
+    <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
+      <!-- 左：MJ（archer 文件名做兜底：先试 mj-archer，再退回 mj_archer） -->
+      <img class="img img-left"
+           src="assets/mj-archer.jpeg?v=9"
+           alt="Midjourney · apprentice archer"
+           onerror="this.onerror=null; this.src='assets/mj_archer.jpeg?v=9';">
+      <!-- 右：Wenxin -->
+      <div class="reveal">
+        <img class="img img-right"
+             src="assets/wx_archer.png?v=9"
+             alt="Wenxin Yige · apprentice archer">
       </div>
-    </article>
-  </section>
+
+      <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
+      <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
+    </div>
+  </article>
+
+  <!-- 3) Forest guardian -->
+  <article class="pair">
+    <h3>Young Forest Guardian</h3>
+    <div class="compare" data-left="Midjourney" data-right="Wenxin Yige">
+      <!-- 左：MJ -->
+      <img class="img img-left"
+           src="assets/mj_forest_guardian.jpeg?v=9"
+           alt="Midjourney · young forest guardian">
+      <!-- 右：Wenxin -->
+      <div class="reveal">
+        <img class="img img-right"
+             src="assets/wx_forest_guardian.png?v=9"
+             alt="Wenxin Yige · young forest guardian">
+      </div>
+
+      <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
+      <div class="labels"><span class="label left">Midjourney</span><span class="label right">Wenxin Yige</span></div>
+    </div>
+  </article>
+</section>
 
   <!-- Analysis -->
   <section id="analysis" class="section section-alt">
