--- a/index.html
+++ b/index.html
@@ -203,58 +203,39 @@ img{display:block;max-width:100%;height:auto}
     </div>
   </section>
 
-  <!-- Comparisons -->
-  <section id="comparisons" class="section">
-    <h2>Comparisons</h2>
+<section id="comparisons" class="section">
+  <h2>Comparisons</h2>
 
-    <!-- 1) Swordswoman -->
-    <article class="pair">
-      <h3>Apprentice Swordswoman</h3>
-      <div class="compare">
-        <!-- 左 = Midjourney（底图） -->
-        <img class="img-left" src="assets/mj_swordswoman.jpeg?v=100" alt="Midjourney · apprentice swordswoman">
-        <!-- 右 = Wenxin（遮罩） -->
-        <div class="reveal">
-          <img class="img-right" src="assets/wx_swordswoman.png?v=100" alt="Wenxin Yige · apprentice swordswoman">
-        </div>
-        <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
-        <div class="labels"><span class="label">Midjourney</span><span class="label">Wenxin Yige</span></div>
-      </div>
-    </article>
+  <!-- 1) Swordswoman -->
+  <article class="pair">
+    <h3>Apprentice Swordswoman</h3>
+    <div class="compare"
+         data-left-label="Midjourney"
+         data-right-label="Wenxin Yige"
+         data-left="assets/mj_swordswoman.jpeg"
+         data-right="assets/wx_swordswoman.png"></div>
+  </article>
 
-    <!-- 2) Archer -->
-    <article class="pair">
-      <h3>Apprentice Archer</h3>
-      <div class="compare">
-        <!-- 左 = Midjourney（底图） -->
-        <img class="img-left"
-             src="assets/mj_archer.jpeg?v=100"
-             alt="Midjourney · apprentice archer"
-             onerror="this.onerror=null;this.src='assets/mj-archer.jpeg?v=100';">
-        <!-- 右 = Wenxin（遮罩） -->
-        <div class="reveal">
-          <img class="img-right" src="assets/wx_archer.png?v=100" alt="Wenxin Yige · apprentice archer">
-        </div>
-        <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
-        <div class="labels"><span class="label">Midjourney</span><span class="label">Wenxin Yige</span></div>
-      </div>
-    </article>
+  <!-- 2) Archer -->
+  <article class="pair">
+    <h3>Apprentice Archer</h3>
+    <div class="compare"
+         data-left-label="Midjourney"
+         data-right-label="Wenxin Yige"
+         data-left="assets/mj-archer.jpeg,assets/mj_archer.jpeg"
+         data-right="assets/wx_archer.png"></div>
+  </article>
 
-    <!-- 3) Forest guardian -->
-    <article class="pair">
-      <h3>Young Forest Guardian</h3>
-      <div class="compare">
-        <!-- 左 = Midjourney（底图） -->
-        <img class="img-left" src="assets/mj_forest_guardian.jpeg?v=100" alt="Midjourney · young forest guardian">
-        <!-- 右 = Wenxin（遮罩） -->
-        <div class="reveal">
-          <img class="img-right" src="assets/wx_forest_guardian.png?v=100" alt="Wenxin Yige · young forest guardian">
-        </div>
-        <input class="slider" type="range" min="0" max="100" value="50" aria-label="comparison slider">
-        <div class="labels"><span class="label">Midjourney</span><span class="label">Wenxin Yige</span></div>
-      </div>
-    </article>
-  </section>
+  <!-- 3) Forest guardian -->
+  <article class="pair">
+    <h3>Young Forest Guardian</h3>
+    <div class="compare"
+         data-left-label="Midjourney"
+         data-right-label="Wenxin Yige"
+         data-left="assets/mj_forest_guardian.jpeg"
+         data-right="assets/wx_forest_guardian.png"></div>
+  </article>
+</section>
 
   <!-- Analysis -->
   <section id="analysis" class="section section-alt">
